snapshots/com/wadpam/openserver/errors/2-SNAPSHOT/errors-2-20121019.040106-1.pom.sha1
4d813bb2a7424345f57181351db73c3da69abd3d